[tool.poetry]
name = "demo-data-structures"
version = "0.1.0"
description = ""
authors = ["ozy-viking <zthankin@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_data_structures"}]

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
